--- a/pic-me-react/client/src/App.css
+++ b/pic-me-react/client/src/App.css
@@ -1,5 +1,11 @@
 .App {
   text-align: center;
+  max-width: 560px;
+  margin: auto;
+  margin-top: 50px;
+  border: 3px;
+  border-color: darkblue;
+
 }
 
 .App-header {
