--- a/pic-me-react/client/src/components/ImageCard/ImageCard.css
+++ b/pic-me-react/client/src/components/ImageCard/ImageCard.css
@@ -1,4 +1,4 @@
-.imageCard {
+/* .imageCard {
     background-size: cover;
     background-position: center;
     background-clip: content-box;
@@ -9,4 +9,36 @@
     position: relative;
     margin: 0 auto;
     margin-top: 30px;
+}*/
+
+
+.container {
+    position: relative;
+    width: 100%;
 }
+
+
+container__imageCard {
+  width: 100%;
+  height: auto;
+}
+
+
+container__imageCard--btn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  background-color: #555;
+  color: white;
+  font-size: 16px;
+  padding: 12px 24px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+container__imageCard--btn:hover {
+  background-color: black;
+} 
