like button styling and etc

--- a/pic-me-react/client/src/components/CommentForm/CommentForm.css
+++ b/pic-me-react/client/src/components/CommentForm/CommentForm.css
@@ -1,5 +1,3 @@
-/* @import url(//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css); */
-
 .detailBox {
     width:100%;
     border:1px solid #bbb;
@@ -75,6 +73,6 @@ button {
     background: transparent;
 }
 
-i {
+/*i {
     color: orange;
-}
+}*/
