--- a/pic-me-react/client/src/App.css
+++ b/pic-me-react/client/src/App.css
@@ -2,10 +2,13 @@
   text-align: center;
   max-width: 560px;
   margin: auto;
-  margin-top: 50px;
+  margin-top: 10px;
   border: 3px;
   border-color: darkblue;
-
+  /*background-image: url("");
+  background-repeat: repeat;
+  background-size: 100%;
+  background-attachment: fixed;*/
 }
 
 .App-header {
