--- a/pic-me-react/client/src/components/ImageCard/ImageCard.css
+++ b/pic-me-react/client/src/components/ImageCard/ImageCard.css
@@ -1,44 +1,38 @@
-/* .imageCard {
-    background-size: cover;
-    background-position: center;
-    background-clip: content-box;
-    border: 6px solid white;
-    height: 500px;
-    width: 500px;
-    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-    position: relative;
-    margin: 0 auto;
-    margin-top: 30px;
-}*/
-
-
-.container {
-    position: relative;
-    width: 100%;
-}
-
-
-container__imageCard {
-  width: 100%;
+.imageCard {
+  background-size: cover;
+  background-position: center;
+  background-clip: content-box;
+  border: 6px solid white;
   height: auto;
+  width: auto;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  position: relative;
+  margin: 0 auto;
+  margin-top: 5px;
+  margin-bottom: 15px;
 }
 
+img {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
 
-container__imageCard--btn {
+.like {
+  /*background: transparent;*/
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  background-color: #555;
-  color: white;
-  font-size: 16px;
-  padding: 12px 24px;
-  border: none;
-  cursor: pointer;
-  border-radius: 5px;
+  top: 0;
+  bottom: 0;
+  /*left: 0;*/
+  right: 0;
+  text-align: center;
+  background: rgba(0,0,0,0.1);
 }
 
-container__imageCard--btn:hover {
-  background-color: black;
-} 
+.like:hover {
+   background: rgba(0,0,0,0.3);
+}
+
+.fa-heart {
+  color: lightsalmon;
+}
