--- a/pic-me-react/client/src/components/Title/Title.css
+++ b/pic-me-react/client/src/components/Title/Title.css
@@ -1,7 +1,13 @@
+/*@import url('https://fonts.googleapis.com/css?family=Merienda');*/
+@import url('https://fonts.googleapis.com/css?family=Gaegu');
+
 #title {
     /* color: orange;*/
-    font-family: 'Monoton';
+    /*font-family: 'Monoton';*/
     font-weight: 500;
+    font-size: 60px;
+    /*font-family: 'Merienda', cursive;*/
+    font-family: 'Gaegu', cursive;
     /* background-color: blue; */
     /* text-shadow: 1px 1px royalblue; */ 
     /*/
