--- a/pic-me-react/client/src/components/ImageCard/ImageCard.css
+++ b/pic-me-react/client/src/components/ImageCard/ImageCard.css
@@ -21,12 +21,12 @@ img {
 .like {
   /*background: transparent;*/
   position: absolute;
-  top: 0;
+  /*top: 0;*/
   bottom: 0;
-  /*left: 0;*/
+  left: 0;
   right: 0;
   text-align: center;
-  /*width: 100%;*/
+  width: 100%;
   background: rgba(0,0,0,0.1);
 }
 
