--- a/pic-me-react/client/src/components/Title/Title.css
+++ b/pic-me-react/client/src/components/Title/Title.css
@@ -36,7 +36,9 @@
     }
 
 #profile-pic-icon {
-    width: 50px;
+    /*width: 50px;*/
+    /*width: 200%;*/
+    /*width: 60%;*/
 }
 
 .row {
@@ -47,8 +49,9 @@
 }
 
 .btn-lg {
-    height: 100%;
-    width: 60px;;
+    /*height: 100%;
+    width: 100%;*/
+    /*width: 60px;*/
+    width: 65%;
     padding: 5%;
 }
-
