--- a/pic-me-react/client/src/components/Title/Title.css
+++ b/pic-me-react/client/src/components/Title/Title.css
@@ -36,7 +36,7 @@
     }
 
 #profile-pic-icon {
-    width: 50px;
+    width: 80%;
 }
 
 .row {
@@ -46,9 +46,19 @@
     padding-right: 30px;
 }
 
-.btn-lg {
-    height: 100%;
-    width: 60px;;
-    padding: 5%;
+.col-8 {
+    padding: 0;
 }
+
+.col-4 {
+    padding: 2%;
+}
+
+.btn-lg {
+    height: auto;
+    width: 80px;
+    padding: 0%;
+    align-items: center;
+}
+
 
