--- a/pic-me-react/client/src/components/ImageCard/ImageCard.css
+++ b/pic-me-react/client/src/components/ImageCard/ImageCard.css
@@ -2,7 +2,7 @@
   background-size: cover;
   background-position: center;
   background-clip: content-box;
-  border: 6px solid white;
+  /*border: 6px solid white;*/
   height: auto;
   width: auto;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
@@ -10,12 +10,14 @@
   margin: 0 auto;
   margin-top: 5px;
   margin-bottom: 15px;
+  border-radius: 5px;
 }
 
 img {
   width: 100%;
   height: 100%;
   overflow: hidden;
+  border-radius: 5px;
 }
 
 .like {
@@ -28,6 +30,8 @@ img {
   text-align: center;
   width: 100%;
   background: rgba(0,0,0,0.1);
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
 .like:hover {
