more minor stuff

--- a/pic-me-react/client/src/pages/LoginPage/Login.css
+++ b/pic-me-react/client/src/pages/LoginPage/Login.css
@@ -1,9 +1,18 @@
 #loginBtn {
-    background-color: orange;
-    color: white;
-    font-style: bold;
+    /*background-color: transparent;
+    color: coral;*/
+    background-color: lightsalmon;
+    border-color: transparent;
+}
+
+#loginBtn:hover {
+	background-color: coral;
 }
 
 #link {
-    color: orange;
+    color: coral;
+}
+
+#link:hover {
+	color: lightsalmon;
 }
