--- a/pic-me-react/client/src/components/Title/Title.css
+++ b/pic-me-react/client/src/components/Title/Title.css
@@ -15,13 +15,12 @@
     font-family: 'Gaegu', cursive;
 
     /* background-color: blue; */
-    /* text-shadow: 1px 1px royalblue; */ 
-    /*/
+    /* text-shadow: 1px 1px royalblue; */
 }
 
 .Nav
     {
-        -webkit-animation: mymove 5s infinite; /* Chrome, Safari, Opera */
+    /*    -webkit-animation: mymove 5s infinite; /* Chrome, Safari, Opera */
         animation: mymove 6s infinite;
     }
     
@@ -57,13 +56,10 @@
     padding: 2%;
 }
 
-.btn-lg {
+.btn-link {
 
     height: auto;
     width: 80px;
     padding: 0%;
     align-items: center;
 }
-
-
-
