--- a/pic-me-react/client/src/components/Title/Title.css
+++ b/pic-me-react/client/src/components/Title/Title.css
@@ -2,6 +2,7 @@
     /* color: orange;*/
     font-family: 'Monoton';
     font-weight: 500;
+    font-size: 300%;
     /* background-color: blue; */
     /* text-shadow: 1px 1px royalblue; */ 
     /*/
