--- a/pic-me-react/client/src/pages/LoginPage/Login.css
+++ b/pic-me-react/client/src/pages/LoginPage/Login.css
@@ -1,7 +1,15 @@
 #loginBtn {
+    background-color: rgba(255, 166, 0, 0.85);
+    color: white;
+    font-style: bold;
+    /* border-color: black; */
+}
+
+#loginBtn:hover {
     background-color: orange;
     color: white;
     font-style: bold;
+    border-color: black;
 }
 
 #link {
