--- a/pic-me-react/client/src/pages/QuestionPage/Question.css
+++ b/pic-me-react/client/src/pages/QuestionPage/Question.css
@@ -1,11 +1,12 @@
 #randomize-btn, #share-btn, #noshare-btn {
   margin-bottom: 12px;
+  width: 125px;
 }
 
 #getGif {
   margin-left: 8px;
 }
 
-#answer {
+/*#answer {
   
-}
+}*/
