--- a/pic-me-react/client/src/App.css
+++ b/pic-me-react/client/src/App.css
@@ -3,6 +3,7 @@
   max-width: 560px;
   margin: auto;
   margin-top: 10px;
+  margin-bottom: 20px;
   border: 3px;
   border-color: royalblue;
   /*background-image: url("");
