major style changes

--- a/client/src/components/Title/Title.css
+++ b/client/src/components/Title/Title.css
@@ -1,23 +1,23 @@
-/*@import url('https://fonts.googleapis.com/css?family=Merienda');*/
-@import url('https://fonts.googleapis.com/css?family=Gaegu');
+/* @import url('https://fonts.googleapis.com/css?family=Merienda');
+@import url('https://fonts.googleapis.com/css?family=Gaegu'); */
 
 #title {
     /* color: orange;*/
-    /*font-family: 'Monoton';*/
+    font-family: 'Monoton';
     font-weight: 500;
-    font-size: 300%;
+    /* font-size: 300%;
     margin-bottom: 0;
     padding-top: 10px;
     padding-bottom: 10px;
 
-    font-size: 60px;
+    font-size: 60px; */
     /*font-family: 'Merienda', cursive;*/
-    font-family: 'Gaegu', cursive;
+    /* font-family: 'Gaegu', cursive; */
     /* background-color: blue; */
     /* text-shadow: 1px 1px royalblue; */
 }
 
-.Nav
+.nav
     {
     /*    -webkit-animation: mymove 5s infinite; /* Chrome, Safari, Opera */
         animation: mymove 6s infinite;
